objects/My_Relationships__c.object
<CustomObject>
    <description>A Contact may have Staff Relationships where s/he is the From and others where s/he is the To in the relationship. This is done through two lookups to Contact, which would natively result in two related lists (one for each lookup) on the Contact page layout. This makes navigation and understanding more complicated for the end-user.
To simplify this perspective, a new object will be created to represent all relationships for a given Contact, with indicators of the From and To in one related list. This object is read-only, and is manipulated entirely under program control.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Relationships</relationshipLabel>
        <relationshipName>My_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>MR{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>My Relationships (Related To)</relationshipLabel>
        <relationshipName>My_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relates_As__c</fullName>
        <formula>IF(
	Contact__c = Staff_Relationship__r.From__c,
	Staff_Relationship__r.Relationship__r.Name_When_From__c,
	Staff_Relationship__r.Relationship__r.Name_When_To__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relates As</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; +  Staff_Relationship__r.Relationship__r.Id, Staff_Relationship__r.Relationship__r.Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Relationship</label>
        <referenceTo>Staff_Relationship__c</referenceTo>
        <relationshipName>My_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>My Relationships</label>
    <nameField>
        <label>My Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Relationships</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>